--- a/css/style.default.css
+++ b/css/style.default.css
@@ -3529,8 +3529,8 @@ fieldset:disabled .btn {
 
 .btn-light {
   color: #212529;
-  background-color: #f8f9fa;
-  border-color: #f8f9fa;
+  background-color: #009688;
+  border-color: #009688;
 }
 
 .btn-light:hover {
@@ -3541,8 +3541,8 @@ fieldset:disabled .btn {
 
 .btn-check:focus + .btn-light, .btn-light:focus {
   color: #212529;
-  background-color: #f9fafb;
-  border-color: #f9fafb;
+  background-color: #009688;
+  border-color: #009688;
   box-shadow: 0 0 0 0.25rem rgba(216, 217, 219, 0.5);
 }
 
@@ -3550,8 +3550,7 @@ fieldset:disabled .btn {
 .btn-check:active + .btn-light, .btn-light:active, .btn-light.active,
 .show > .btn-light.dropdown-toggle {
   color: #212529;
-  background-color: #f9fafb;
-  border-color: #f9fafb;
+  background-color: #009688;
 }
 
 .btn-check:checked + .btn-light:focus,
@@ -3562,8 +3561,8 @@ fieldset:disabled .btn {
 
 .btn-light:disabled, .btn-light.disabled {
   color: #212529;
-  background-color: #f8f9fa;
-  border-color: #f8f9fa;
+  background-color: #009688;
+  border-color: #009688;
 }
 
 .btn-dark {
