--- a/css/style.default.css
+++ b/css/style.default.css
@@ -24,8 +24,8 @@
   --bs-white: #fff;
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
-  --bs-primary: #4E66F8;
-  --bs-secondary: #e83e8c;
+  --bs-primary: #0097A0;
+  --bs-secondary: #ED7D31;
   --bs-success: #35b653;
   --bs-info: #17a2b8;
   --bs-warning: #ffc107;
@@ -216,7 +216,7 @@ sup {
 }
 
 a {
-  color: #4E66F8;
+  color: #0097A0;
   text-decoration: none;
 }
 
@@ -2706,8 +2706,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input:checked {
-  background-color: #4E66F8;
-  border-color: #4E66F8;
+  background-color: #0097A0;
+  border-color: #0097A0;
 }
 
 .form-check-input:checked[type="checkbox"] {
@@ -2719,8 +2719,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input[type="checkbox"]:indeterminate {
-  background-color: #4E66F8;
-  border-color: #4E66F8;
+  background-color: #0097A0;
+  border-color: #0097A0;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 
@@ -2813,7 +2813,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #4E66F8;
+  background-color: #0097A0;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2846,7 +2846,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #4E66F8;
+  background-color: #0097A0;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3295,8 +3295,8 @@ fieldset:disabled .btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #00cec9;
-  border-color: #1abc9c;
+  background-color:#009688;
+  border-color: #009688;
 }
 
 .btn-primary:hover {
@@ -3328,14 +3328,14 @@ fieldset:disabled .btn {
 
 .btn-primary:disabled, .btn-primary.disabled {
   color: #fff;
-  background-color: #4E66F8;
-  border-color: #4E66F8;
+  background-color: #0097A0;
+  border-color: #0097A0;
 }
 
 .btn-secondary {
   color: #fff;
-  background-color: #e83e8c;
-  border-color: #e83e8c;
+  background-color: #ED7D31;
+  border-color: #ED7D31;
 }
 
 .btn-secondary:hover {
@@ -3367,8 +3367,8 @@ fieldset:disabled .btn {
 
 .btn-secondary:disabled, .btn-secondary.disabled {
   color: #fff;
-  background-color: #e83e8c;
-  border-color: #e83e8c;
+  background-color: #ED7D31;
+  border-color: #ED7D31;
 }
 
 .btn-success {
@@ -3605,14 +3605,14 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-primary {
-  color: #4E66F8;
-  border-color: #4E66F8;
+  color: #0097A0;
+  border-color: #0097A0;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #4E66F8;
-  border-color: #4E66F8;
+  background-color: #0097A0;
+  border-color: #0097A0;
 }
 
 .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
@@ -3622,8 +3622,8 @@ fieldset:disabled .btn {
 .btn-check:checked + .btn-outline-primary,
 .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
   color: #fff;
-  background-color: #4E66F8;
-  border-color: #4E66F8;
+  background-color: #0097A0;
+  border-color: #0097A0;
 }
 
 .btn-check:checked + .btn-outline-primary:focus,
@@ -3632,19 +3632,19 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-  color: #4E66F8;
+  color: #0097A0;
   background-color: transparent;
 }
 
 .btn-outline-secondary {
-  color: #e83e8c;
-  border-color: #e83e8c;
+  color: #ED7D31;
+  border-color: #ED7D31;
 }
 
 .btn-outline-secondary:hover {
   color: #fff;
-  background-color: #e83e8c;
-  border-color: #e83e8c;
+  background-color: #ED7D31;
+  border-color: #ED7D31;
 }
 
 .btn-check:focus + .btn-outline-secondary, .btn-outline-secondary:focus {
@@ -3654,8 +3654,8 @@ fieldset:disabled .btn {
 .btn-check:checked + .btn-outline-secondary,
 .btn-check:active + .btn-outline-secondary, .btn-outline-secondary:active, .btn-outline-secondary.active, .btn-outline-secondary.dropdown-toggle.show {
   color: #fff;
-  background-color: #e83e8c;
-  border-color: #e83e8c;
+  background-color: #ED7D31;
+  border-color: #ED7D31;
 }
 
 .btn-check:checked + .btn-outline-secondary:focus,
@@ -3664,7 +3664,7 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-secondary:disabled, .btn-outline-secondary.disabled {
-  color: #e83e8c;
+  color: #ED7D31;
   background-color: transparent;
 }
 
@@ -3862,7 +3862,7 @@ fieldset:disabled .btn {
 
 .btn-link {
   font-weight: 400;
-  color: #4E66F8;
+  color: #0097A0;
   text-decoration: none;
 }
 
@@ -4184,7 +4184,7 @@ fieldset:disabled .btn {
 }
 
 .dropdown-item:hover, .dropdown-item:focus {
-  color: #4E66F8;
+  color: #0097A0;
   text-decoration: none;
   background-color: #f8f9fa;
 }
@@ -4192,7 +4192,7 @@ fieldset:disabled .btn {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #4E66F8;
+  background-color: #0097A0;
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -4237,7 +4237,7 @@ fieldset:disabled .btn {
 
 .dropdown-menu-dark .dropdown-item.active, .dropdown-menu-dark .dropdown-item:active {
   color: #fff;
-  background-color: #4E66F8;
+  background-color: #0097A0;
 }
 
 .dropdown-menu-dark .dropdown-item.disabled, .dropdown-menu-dark .dropdown-item:disabled {
@@ -4385,7 +4385,7 @@ fieldset:disabled .btn {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #4E66F8;
+  color: #0097A0;
   -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -4453,7 +4453,7 @@ fieldset:disabled .btn {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #4E66F8;
+  background-color: #0097A0;
 }
 
 .nav-fill > .nav-link,
@@ -5272,7 +5272,7 @@ fieldset:disabled .btn {
 .page-link {
   position: relative;
   display: block;
-  color: #4E66F8;
+  color: #0097A0;
   background-color: #fff;
   border: 1px solid #dee2e6;
   -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -5309,8 +5309,8 @@ fieldset:disabled .btn {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #4E66F8;
-  border-color: #4E66F8;
+  background-color: #0097A0;
+  border-color: #0097A0;
 }
 
 .page-item.disabled .page-link {
@@ -5416,8 +5416,8 @@ fieldset:disabled .btn {
 
 .alert-primary {
   color: #2f3d95;
-  background-color: #e4e8fe;
-  border-color: #e4e8fe;
+  background-color: #0096881c;
+  border-color: #0096881c;
 }
 
 .alert-primary .alert-link {
@@ -5528,7 +5528,7 @@ fieldset:disabled .btn {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #4E66F8;
+  background-color: #0097A0;
   -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease;
 }
@@ -5624,8 +5624,8 @@ fieldset:disabled .btn {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #4E66F8;
-  border-color: #4E66F8;
+  background-color: #0097A0;
+  border-color: #0097A0;
 }
 
 .list-group-item + .list-group-item {
@@ -7037,7 +7037,7 @@ fieldset:disabled .btn {
 }
 
 .link-primary {
-  color: #4E66F8;
+  color: #0097A0;
 }
 
 .link-primary:hover, .link-primary:focus {
@@ -7045,7 +7045,7 @@ fieldset:disabled .btn {
 }
 
 .link-secondary {
-  color: #e83e8c;
+  color: #ED7D31;
 }
 
 .link-secondary:hover, .link-secondary:focus {
@@ -7467,11 +7467,11 @@ fieldset:disabled .btn {
 }
 
 .border-primary {
-  border-color: #4E66F8 !important;
+  border-color: #0097A0 !important;
 }
 
 .border-secondary {
-  border-color: #e83e8c !important;
+  border-color: #ED7D31 !important;
 }
 
 .border-success {
@@ -8717,11 +8717,11 @@ fieldset:disabled .btn {
 
 /* rtl:end:remove */
 .text-primary {
-  color: #4E66F8 !important;
+  color: #0097A0 !important;
 }
 
 .text-secondary {
-  color: #e83e8c !important;
+  color: #ED7D31 !important;
 }
 
 .text-success {
@@ -8773,11 +8773,11 @@ fieldset:disabled .btn {
 }
 
 .bg-primary {
-  background-color: #4E66F8 !important;
+  background-color: #0097A0 !important;
 }
 
 .bg-secondary {
-  background-color: #e83e8c !important;
+  background-color: #ED7D31 !important;
 }
 
 .bg-success {
@@ -8995,19 +8995,19 @@ fieldset:disabled .btn {
 }
 
 .text-primary {
-  color: #4E66F8 !important;
+  color: #0097A0 !important;
 }
 
 .text-primary-hover:hover {
-  color: #4E66F8 !important;
+  color: #0097A0 !important;
 }
 
 .text-secondary {
-  color: #e83e8c !important;
+  color: #ED7D31 !important;
 }
 
 .text-secondary-hover:hover {
-  color: #e83e8c !important;
+  color: #ED7D31 !important;
 }
 
 .text-success {
@@ -13867,7 +13867,7 @@ fieldset:disabled .btn {
 
 @media (min-width: 768px) {
   .hero-home {
-    min-height: 375px;
+    min-height: 750px;
   }
 }
 
@@ -13993,7 +13993,7 @@ fieldset:disabled .btn {
 
 .nav-tabs.search-bar-nav-tabs .nav-link.active,
 .nav-tabs.search-bar-nav-tabs .nav-item.show .nav-link {
-  color: #4E66F8;
+  color: #0097A0;
   background-color: #fff;
   border-color: #fff;
 }
@@ -14027,7 +14027,7 @@ fieldset:disabled .btn {
   width: 3rem;
   text-align: center;
   opacity: 0.5;
-  color: #4E66F8;
+  color: #0097A0;
   font-size: 90px;
   font-weight: bold;
   z-index: -1;
@@ -14157,9 +14157,9 @@ fieldset:disabled .btn {
   letter-spacing: 0;
   font-weight: normal;
   padding: 0;
-  border: solid 1px #4E66F8;
+  border: solid 1px #0097A0;
   text-align: center;
-  color: #4E66F8;
+  color: #0097A0;
   flex-shrink: 0;
 }
 
@@ -14545,7 +14545,7 @@ fieldset:disabled .btn {
 }
 
 .map-custom-popup .leaflet-popup-content a {
-  color: #4E66F8;
+  color: #0097A0;
 }
 
 .map-custom-popup .popup-venue {
@@ -14587,12 +14587,12 @@ fieldset:disabled .btn {
 
 .map-custom-tooltip.active {
   color: #fff;
-  border-color: #4E66F8;
-  background-color: #4E66F8;
+  border-color: #0097A0;
+  background-color: #0097A0;
 }
 
 .map-custom-tooltip.active:before {
-  border-top-color: #4E66F8;
+  border-top-color: #0097A0;
 }
 
 /*
@@ -14758,7 +14758,7 @@ fieldset:disabled .btn {
 */
 .testimonial-quote {
   margin-bottom: 10px;
-  color: #4E66F8;
+  color: #0097A0;
   font-size: 1.5rem;
 }
 
@@ -14974,7 +14974,7 @@ fieldset:disabled .btn {
 }
 
 .ribbon-primary {
-  background-color: #4E66F8 !important;
+  background-color: #0097A0 !important;
 }
 
 .ribbon-primary::before {
@@ -14982,7 +14982,7 @@ fieldset:disabled .btn {
 }
 
 .ribbon-secondary {
-  background-color: #e83e8c !important;
+  background-color: #ED7D31 !important;
 }
 
 .ribbon-secondary::before {
@@ -15136,7 +15136,7 @@ p.lead strong {
 
 .blockquote {
   padding: 1rem;
-  border-left: 2px solid #4E66F8;
+  border-left: 2px solid #0097A0;
 }
 
 .blockquote-people {
@@ -15212,9 +15212,9 @@ p.lead strong {
   width: 4.5rem;
   height: 4.5rem;
   text-align: center;
-  color: #4E66F8;
+  color: #0097A0;
   border-radius: 0.4rem;
-  background: #e4e8fe;
+  background: #0096881c;
   -webkit-box-align: center;
   align-items: center;
   -webkit-box-pack: center;
@@ -15551,7 +15551,7 @@ body {
 }
 
 .date-picker-wrapper .month-wrapper table .day.real-today {
-  background-color: #e83e8c;
+  background-color: #ED7D31;
   color: #fff !important;
   border-radius: 50%;
 }
@@ -15765,7 +15765,7 @@ body {
 .date-picker-wrapper .first-date-selected,
 .date-picker-wrapper .last-date-selected {
   position: relative;
-  background-color: #4E66F8 !important;
+  background-color: #0097A0 !important;
   color: white !important;
   border-radius: 50% !important;
   z-index: 1;
@@ -15779,7 +15779,7 @@ body {
   content: "";
   left: 50%;
   top: 0;
-  background: #4E66F8;
+  background: #0097A0;
   width: 50%;
   height: 100%;
 }
@@ -16778,11 +16778,11 @@ button.mfp-close {
 }
 
 .text-primary .noUi-handle, .text-primary .noUi-connect {
-  background: #4E66F8;
+  background: #0097A0;
 }
 
 .text-secondary .noUi-handle, .text-secondary .noUi-connect {
-  background: #e83e8c;
+  background: #ED7D31;
 }
 
 .nouislider-values {
@@ -16813,14 +16813,14 @@ button.mfp-close {
 
 .swiper-button-prev,
 .swiper-container-rtl .swiper-button-next {
-  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'#4E66F8'%2F%3E%3C%2Fsvg%3E");
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'#0097A0'%2F%3E%3C%2Fsvg%3E");
   left: 10px;
   right: auto;
 }
 
 .swiper-button-next,
 .swiper-container-rtl .swiper-button-prev {
-  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23#4E66F8'%2F%3E%3C%2Fsvg%3E");
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23#0097A0'%2F%3E%3C%2Fsvg%3E");
   right: 10px;
   left: auto;
 }
@@ -16837,16 +16837,16 @@ button.mfp-close {
 
 .swiper-pagination-bullet-active {
   opacity: 1;
-  background: #4E66F8;
+  background: #0097A0;
 }
 
 .swiper .swiper-pagination-bullet-active {
   opacity: 1;
-  background: #4E66F8;
+  background: #0097A0;
 }
 
 .swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
-  background: #4E66F8;
+  background: #0097A0;
 }
 
 /*
@@ -17000,7 +17000,7 @@ button.mfp-close {
 }
 
 .bg-primary-light {
-  background-color: #e4e8fe;
+  background-color: #0096881c;
 }
 
 .bg-secondary-light {
@@ -17032,12 +17032,12 @@ button.mfp-close {
 }
 
 .badge-primary-light {
-  color: #4E66F8;
-  background-color: #e4e8fe;
+  color: #0097A0;
+  background-color: #0096881c;
 }
 
 .badge-secondary-light {
-  color: #e83e8c;
+  color: #ED7D31;
   background-color: #fce2ee;
 }
 
@@ -17523,7 +17523,7 @@ span .counter {
 }
 
 #scrollTop {
-  background: #2BA9B0;
+  background: #009688;
   color: #fff;
   cursor: pointer;
   width: 150px;
